added frontend and fixed result analytics